Time: 2 ms (83.61%) | Memory: 45.2 MB (7.05%) - LeetSync