@@ -1,28 +1,36 @@
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 class Solution {
-    public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> result = new ArrayList<>();
-        Arrays.sort(candidates);
-        backtrack(candidates, target, 0, new ArrayList<>(), result);
-        return result;
-    }
-
-    private void backtrack(int[] candidates, int remaining, int start, List<Integer> current, List<List<Integer>> result) {
-        if (remaining == 0) {
-            result.add(new ArrayList<>(current));
+    protected void backtrack(
+        int remain,
+        LinkedList<Integer> comb,
+        int start,
+        int[] candidates,
+        List<List<Integer>> results
+    ) {
+        if (remain == 0) {
+            results.add(new ArrayList<Integer>(comb));
+            return;
+        } else if (remain < 0) {
             return;
         }
-        
-        for (int i = start; i < candidates.length; i++) {
-            if (candidates[i] > remaining) {
-                break;
-            }
-            current.add(candidates[i]);
-            backtrack(candidates, remaining - candidates[i], i, current, result);
-            current.remove(current.size() - 1);
+
+        for (int i = start; i < candidates.length; ++i) {
+            comb.add(candidates[i]);
+            this.backtrack(
+                    remain - candidates[i],
+                    comb,
+                    i,
+                    candidates,
+                    results
+                );
+            comb.removeLast();
         }
+    }
+
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        List<List<Integer>> results = new ArrayList<List<Integer>>();
+        LinkedList<Integer> comb = new LinkedList<Integer>();
+
+        this.backtrack(target, comb, 0, candidates, results);
+        return results;
     }
 }
